--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,6 +24,7 @@ jobs:
           host: ${{ secrets.SERVER_ADDRESS }}
           username: ${{ secrets.SERVER_USER }}
           key_path: deploy_key.pem
+          script_stop: true
           script: |
             sudo -u www bash -c '
             cd /www/test
