--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_ADDRESS }}
           username: ${{ secrets.SERVER_USER }}
+          port: 22
           key_path: deploy_key.pem
           script: |
             sudo -u www bash -c '
