--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -22,8 +22,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: 139.9.83.16
-          username: ${{ secrets.SERVER_USER }}
-          port: 22
+          username: root
           key_path: deploy_key.pem
           script: |
             sudo -u www bash -c '
