--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -25,8 +25,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
-          tag_name: BMS_Back
-          release_name: Release BMS_Bck
+          tag_name: BMS_Back_01
+          release_name: Release BMS_Bck_01
           draft: false
           prerelease: false
 
