--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -8,51 +8,53 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - run pwd
+      - run ls
 
-      # 下载源码
-      - name: Checkout
-        uses: actions/checkout@master
-
-      # 打包构建
-      - name: Build
-        uses: actions/setup-node@master
-      - run: tar -zcvf release.tgz package.json  pm2.config.json
-
-      # 发布 Release
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-        with:
-          tag_name: BMS_Back_02
-          release_name: Release BMS_Bck_02
-          draft: false
-          prerelease: false
-
-      # 上传构建结果到 Release
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release.tgz
-          asset_name: release.tgz
-          asset_content_type: application/x-tgz
-
-      # 部署到服务器
-      - name: Deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
-          script: |
-            cd /root/test
-            wget https://github.com/VeteranBoLuo/BMS_Back/releases/latest/download/release.tgz -O release.tgz
-            tar zxvf release.tgz
-            npm install --production
-            pm2 reload pm2.config.json
+#      # 下载源码
+#      - name: Checkout
+#        uses: actions/checkout@master
+#
+#      # 打包构建
+#      - name: Build
+#        uses: actions/setup-node@master
+#      - run: tar -zcvf release.tgz package.json  pm2.config.json
+#
+#      # 发布 Release
+#      - name: Create Release
+#        id: create_release
+#        uses: actions/create-release@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+#        with:
+#          tag_name: BMS_Back_02
+#          release_name: Release BMS_Bck_02
+#          draft: false
+#          prerelease: false
+#
+#      # 上传构建结果到 Release
+#      - name: Upload Release Asset
+#        id: upload-release-asset
+#        uses: actions/upload-release-asset@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: ./release.tgz
+#          asset_name: release.tgz
+#          asset_content_type: application/x-tgz
+#
+#      # 部署到服务器
+#      - name: Deploy
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.HOST }}
+#          username: ${{ secrets.USERNAME }}
+#          password: ${{ secrets.PASSWORD }}
+#          port: ${{ secrets.PORT }}
+#          script: |
+#            cd /root/test
+#            wget https://github.com/VeteranBoLuo/BMS_Back/releases/latest/download/release.tgz -O release.tgz
+#            tar zxvf release.tgz
+#            npm install --production
+#            pm2 reload pm2.config.json
