--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -8,8 +8,8 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - run pwd
-      - run ls
+      - run: pwd
+      - run: ls
 
 #      # 下载源码
 #      - name: Checkout
