--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -30,7 +30,7 @@ jobs:
           # 源目录改为项目根目录
           source: "./*"
           # 目标目录根据你的服务器路径修改
-          target: "/www/wwwroot/BMS_Back"
+          target: "/www/wwwroot"
 
       # 如果需要，添加步骤来在服务器上启动你的Node.js应用
       - name: 启动Node.js应用
