--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express": "4.17.1",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.11.4"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2"
   }
 }
