--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cheerio": "1.0.0-rc.12",
     "express": "4.17.1",
     "multer": "1.4.5-lts.1",
-    "mysql2": "^3.11.4"
+    "mysql2": "^3.11.4",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "prettier": "^3.4.2"
