新增后端基础请求方法

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -45,7 +45,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            # 停止旧服务
-            sudo systemctl stop BMS_Back
-            # 启动新服务
-            sudo systemctl start BMS_Back
+            pkill -f "node app.js"
+            cd /www/wwwroot/BMS_Back && node app.js &
