--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -45,5 +45,4 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            pkill -f "node app.js"
-            cd /www/wwwroot/BMS_Back && node app.js &
+            pm2 restart BMS_Back
