--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -8,7 +8,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-
       - name: 读取仓库内容
         uses: actions/checkout@master
 
@@ -32,9 +31,9 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           # 源目录改为项目根目录
-          source: "./*"
+          source: './*'
           # 目标目录根据你的服务器路径修改
-          target: "/www/wwwroot/BMS_Back"
+          target: '/www/wwwroot/BMS_Back'
 
       # 通过SSH连接到服务器并重启服务
       - name: 重启Node.js服务
@@ -45,4 +44,4 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            pm2 restart BMS_Back
+            cd /www/wwwroot/BMS_Back && (pkill -f "node app.js" || true) &&  node app.js
