新增后端基础请求方法

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -44,4 +44,4 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            cd /www/wwwroot/BMS_Back && (pkill -f "node app.js" || true) &&  node app.js
+            pm2 restart app
