--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "5.0.0",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.11.4",
+    "node-fetch": "^3.3.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
