--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "5.0.0",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.11.4",
