--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "5.0.0",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.11.4",
+    "nodemailer": "^7.0.5",
+    "redis": "^5.6.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
