新增邮箱验证功能

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -44,4 +44,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            pm2 restart app
+            cd /www/wwwroot/BMS_Back && (pkill -f "node app.js" || true) &&  node app.js
+#            pm2 restart app
