--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -44,5 +44,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            cd /www/wwwroot/BMS_Back && (pkill -f "node app.js" || true) &&  node app.js
+            cd /www/wwwroot/BMS_Back &&  node app.js
 #            pm2 restart app
