新增邮箱验证功能

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -44,5 +44,4 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            cd /www/wwwroot/BMS_Back &&  node app.js
-#            pm2 restart app
+            pm2 restart app
