--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,6 @@ NODE_ENV=development
 GITHUB_CLIENT_ID=Ov23liuOPhDka7KkXrpQ
 GITHUB_CLIENT_SECRET=9c899f7920f8385275f35076fdf6a6b4beb3d7c6
 REDIS_URL=redis://localhost:6379
+
+# 阿里云百炼 API Key
+DASHSCOPE_API_KEY=sk-2dc8352755964deaad357bd8644ef2b3
