--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@ BASE_URL=http://127.0.0.1:9001
 NODE_ENV=development
 GITHUB_CLIENT_ID=Ov23liuOPhDka7KkXrpQ
 GITHUB_CLIENT_SECRET=9c899f7920f8385275f35076fdf6a6b4beb3d7c6
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://127.0.0.1:6379
 
 # 阿里云百炼 API Key
 DASHSCOPE_API_KEY=sk-2dc8352755964deaad357bd8644ef2b3
