--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,8 @@ REDIS_URL=redis://127.0.0.1:6379
 
 # 阿里云百炼 API Key
 DASHSCOPE_API_KEY=sk-2dc8352755964deaad357bd8644ef2b3
+
+OBS_AK=HPUAVAKVYRUUYKOIUUYZ
+OBS_SK=Kax2vXaUmYbMXyMxFqEk7LDjVCnJQHSOL1wOLVrQ
+OBS_ENDPOINT=https://obs.cn-south-1.myhuaweicloud.com
+OBS_BUCKET_NAME=light-note-files
