--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "esdk-obs-nodejs": "^3.25.6",
     "express": "5.0.0",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.11.4",
